--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.5",
+    "react-select": "^3.1.0",
     "react-transition-group": "^2.5.3",
     "redux": "^4.0.1",
     "redux-form": "^7.4.2",
